# opencode-container

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile  PLAN.md  README.md  ROADMAP.md  cli-spec.json  entrypoint.sh  opencode-container  test-completion.sh
.github/workflows/: release.yml
completions/bash/: opencode-container
completions/zsh/: _opencode-container
container/: Containerfile  Containerfile.debian  entrypoint.sh
dev/: README.md  common-utils.json  docker-outside-of-docker.json  rust-devcontainer.json
docs/: commands.md  design.md  install.md  issues.md  manual-commands.md  manual-process.md
patches/: 0001-project-fromdirectory-use-directory-for-non-git-work.patch  0002-tui-plugin-runtime-fix-vcs-inference-for-non-git-dirs.patch  0003-ghostty-web-pass-absolute-wasm-url-for-non-root-spa-routes.patch  readme.md
scripts/: migrate-xdg.sh
src/: cli.rs  main.rs  util.rs
src/cmd/: completion.rs  mod.rs  projects.rs  run.rs
tests/: README.md  cli.rs
tests/e2e/: run-test
tests/integration/: smoke.sh
tests/testdata/: README.md  features-common-utils-override.json  features-common-utils.json  features-go.json  features-python.json
tests/testdata/test-project/: README.md
tests/testdata/test-project/.devcontainer/: devcontainer.json
