[package]
name = "opencode-container"
version = "0.1.0"
edition = "2021"
authors = ["Scott Rigby <scott@r6by.com>"]
description = "Run opencode in a Podman container with per-project isolation"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.6", features = ["derive", "cargo", "wrap_help"] }
clap_complete = "4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
etcetera = "0.9"
base64 = "0.22"
ctrlc = "3.4"
tempfile = "3.10"

[dev-dependencies]
assert_cmd = "2.0"

[build-dependencies]
clap_complete = "4.5"
